# httpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
cpp/examples/httpp/: main.cpp
cpp/examples/server/: main.cpp
cpp/src/: connection.hpp  connection_impl.hpp  connection_queue.cpp  connection_queue.hpp  connectionqueue.cpp  connectionqueue.hpp  listensocket.cpp  listensocket.hpp  mock_prod.hpp  requesthandler.hpp  requestparser.cpp  requestparser.hpp  server.cpp  server.hpp  socketstreambuffer.hpp
cpp/src/connection/: connection.hpp  connection_impl.hpp  connection_mock.hpp  streambuffer.hpp
cpp/src/http/: endpoint.hpp  headerkey.hpp  request.hpp  requesthandler.hpp  requestparser.cpp  requestparser.hpp  response.hpp  responsestatus.hpp
cpp/src/mock/: listensocket_mocks.cpp  mock.hpp
cpp/src/route/: node.hpp  request.hpp  route.hpp
cpp/src/server/: connection_queue.cpp  connection_queue.hpp  controller.hpp  protocol.hpp  requesthandler.hpp  router.hpp  server.cpp  server.hpp
cpp/src/server/route/: node.hpp  node_lookup_result.hpp  request.hpp  route.hpp
cpp/src/socket/: listensocket.cpp  listensocket.hpp  listensocketexceptions.hpp
cpp/src/util/: streamprocessor.hpp  string.cpp  string.hpp
cpp/test/: connection_queue_test.cpp  httpresponse_test.cpp  listensocket_test.cpp  requesthandler_test.cpp  requestparser_test.cpp  requestqueue_test.cpp  routenode_test.cpp  router_test.cpp  socketstream_test.cpp  streamprocessor_test.cpp  unit_test.cpp
data/: biggerThatBufferLine.txt
examples/httpp/: main.cpp
examples/server/: main.cpp
hooks/: pre-push
src/: Makefile  connection.cpp  connectionqueue.cpp  httpp.cpp  listensocket.cpp  listensocket_mocks.cpp  requestparser.cpp  router.cpp  server.cpp  socket.cpp  test_buffervalueptr.cpp  test_connection.cpp  test_httpresponse.cpp  test_listensocket.cpp  test_requesthandler.cpp  test_requestparser.cpp  test_requestqueue.cpp  test_routenode.cpp  test_router.cpp  test_socket.cpp  test_socketstream.cpp  test_streamprocessor.cpp  test_unit.cpp  util_stream.cpp  util_string.cpp
src/include/: buffervalueptr.hpp  connection.hpp  connection_mock.hpp  connectionqueue.hpp  controller.hpp  httpexceptions.hpp  httpheaderkey.hpp  httprequest.hpp  httpresponse.hpp  httpresponsestatus.hpp  listensocket.hpp  listensocket_mocks.hpp  listensocketexceptions.hpp  mock.hpp  mock_test.hpp  prod_mock.hpp  protocol.hpp  requesthandler.hpp  requestparser.hpp  requestpayload.hpp  route.hpp  route_node.hpp  route_node_lookup_result.hpp  route_request.hpp  router.hpp  server.hpp  socket.hpp  socketstreambuffer.hpp  streamprocessor.hpp  string_util.hpp  util_stream.hpp  util_string.hpp  vector_util.hpp  zerocopybuffer.hpp
src/include/http/: endpoint.hpp  headerkey.hpp  method_type.hpp  request.hpp  request_method_type.hpp  response.hpp  response_fwd.hpp
src/include/route/: node.hpp  node_lookup_result.hpp  request.hpp
